--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,7 +49,8 @@
     }
   },
   "pathPicker": {
-    "pickFolder": "Select your game folder"
+    "pickFolder": "Select your game folder",
+    "buttonLabel": "Select folder"
   },
   "monitor": {
     "season": "Season",
