UI Fixes for CW Mode

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -68,6 +68,10 @@
         "Hurricane",
         "Typhoon"
       ]
+    },
+    "teamPopup":{
+      "info":"more Information",
+      "wowsNumbers": "Clan on Wows-Numbers"
     }
   },
   "settings": {
