--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -66,16 +66,19 @@
       "text": "Rank {{rank}} in {{league}}, Division {{division}}, WR {{winrate}}%",
       "leagues": [
         "Hurricane",
-        "Typhoon"
+        "Typhoon",
+        "Storm",
+        "Gale",
+        "Squall"
       ]
     },
-    "teamPopup":{
-      "info":"more Information",
+    "teamPopup": {
+      "info": "more Information",
       "wowsNumbers": "Clan on Wows-Numbers"
     },
-    "hidden":"Player has a hidden profile",
-    "bot":"This is a bot",
-    "noBattles":"Player has no battles on this ship yet"
+    "hidden": "Player has a hidden profile",
+    "bot": "This is a bot",
+    "noBattles": "Player has no battles on this ship yet"
   },
   "settings": {
     "header": "Settings",
