Added error text, removed duplicate ui error message when fetching fails

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -117,7 +117,8 @@
       "matchUpdated": "Match updated.",
       "clientConnected": "Web app client connected.",
       "clientDisconnected": "Web app client disconnected.",
-      "settingsSaved": "Settings saved"
+      "settingsSaved": "Settings saved",
+      "fetchingError": "Error in stats fetcher api."
     }
   }
 }
