Added error text, removed duplicate ui error message when fetching fails

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -118,7 +118,7 @@
       "clientConnected": "Web app client connected.",
       "clientDisconnected": "Web app client disconnected.",
       "settingsSaved": "Settings saved",
-      "fetchingError": "Error in stats fetcher api."
+      "fetchingError": "Error in stats fetcher api. Please contact me."
     }
   }
 }
