Fixes for Changelog and badges for unread changelogs

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,5 +132,8 @@
       "settingsSaved": "Settings saved",
       "fetchingError": "Error in stats fetcher api. Please contact me."
     }
+  },
+  "changelogs":{
+    "dialogHeader": "Changelog v{{version}}"
   }
 }
