Fixed some minor issues and added the layout for the changelogs page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -139,6 +139,8 @@
     }
   },
   "changelogs": {
-    "dialogHeader": "Changelog v{{version}}"
+    "dialogHeader": "Changelog v{{version}}",
+    "closeButton": "Got it!",
+    "markAllAsSeen":"Mark all as seen"
   }
 }
