Added small fontsize

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -99,6 +99,7 @@
         "caption": "Fontsize",
         "summary": "Change the fontsize of the player and team information.",
         "items": {
+          "small": "small",
           "normal": "Normal",
           "big": "Big",
           "huge": "Huge"
