Naming overall->account, added account winrate bg color option

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -111,7 +111,8 @@
         "items": {
           "off": "Disabled",
           "pr": "PR",
-          "wr": "Winrate"
+          "wr": "Winrate",
+          "accwr": "Account Winrate"
         }
       },
       "coloredValues": {
