Added closeToTray option

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -91,6 +91,10 @@
       "autoUpdate": {
         "caption": "AutoUpdate",
         "summary": "When enabled app will check for a new version at each start."
+      },
+      "closeToTray":{
+        "caption": "Close to tray",
+        "summary": "When enabled app will minimize to tray upon clicking the close icon."
       }
     },
     "appearance": {
