--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,165 +1,165 @@
 {
   "appTitle": "WoWs Monitor",
+  "changelogs": {
+      "closeButton": "Got it!",
+      "dialogHeader": "Changelog v{{version}}",
+      "markAllAsSeen": "Mark all as seen"
+  },
   "meta": {
-    "default": {
-      "title": "Welcome"
-    },
-    "monitor": {
-      "title": "Monitor"
-    },
-    "settings": {
-      "title": "Settings"
-    },
-    "about": {
-      "title": "About"
-    },
-    "changelogs": {
-      "title": "Changelogs"
-    }
-  },
-  "webConnect": {
-    "desktop": {
-      "title": "Web-Connect",
-      "description": "This feature is mainly for people who don't own a second screen and don't want to tab out of the game. <br /> Visit <a href=\"https://app.wows-monitor.com\">app.wows-monitor.com</a> on your second device (phone, laptop, etc) and open the Web-Connect popup. <br /> After you scanned this QR-Code you will receive all match updates on your second device"
-    },
-    "browser": {
-      "title": "Web-Connect",
-      "chooseVideo": "Select camera",
-      "description": "Connect to a desktop app by following the steps below.",
-      "step1": "Scan the QR-Code from the desktop app.",
-      "step2": "Enjoy!"
-    },
-    "issues": {
-      "permission": "Camera permission is required"
-    }
-  },
-  "service": {
-    "connected": "Service connected",
-    "hostConnected": "Service conntected and desktop client paired",
-    "reconnect": "Reconnect to service",
-    "issues": {
-      "connection": "Couldn't connect to the online service.",
-      "browser": {
-        "noToken": "Service connected but no desktop client token found.",
-        "hostDisconnected": "Service connected but no desktop client is paired."
+      "about": {
+          "title": "About"
+      },
+      "changelogs": {
+          "title": "Changelogs"
+      },
+      "default": {
+          "title": "Welcome"
+      },
+      "monitor": {
+          "title": "Monitor"
+      },
+      "settings": {
+          "title": "Settings"
       }
-    },
-    "status": {
-      "idle": "Waiting for match...",
-      "fetching": "Updating match",
-      "fetched": "Match up-to-date"
-    }
-  },
-  "pathPicker": {
-    "pickFolder": "Select your game folder",
-    "buttonLabel": "Select folder",
-    "dialogHeader": "Select your game folder",
-    "additionalInfo": "Information about selected folder",
-    "description": "Select the main installation folder of World of Warships. <br />    If you have the WGC installation the path should look similar to this:<br />    <strong>C:\\Games\\World of Warships</strong> <br />    If you have the Steam installation the path should look similar to this:<br />    <strong>C:\\Programs\\Steam\\common<i>id</i>World of Warships</strong>"
   },
   "monitor": {
-    "season": "Season",
-    "map": "Map",
-    "matchGroup": {
-      "CLAN": "Clan War",
-      "PVP": "Random",
-      "COOPERATIVE": "Coop",
-      "PVE": "PVE",
-      "RANKED": "Ranked"
-    },
-    "cw": {
-      "text": "Rank {{rank}} in {{league}}, Division {{division}}, WR {{winrate}}%",
-      "leagues": [
-        "Hurricane",
-        "Typhoon",
-        "Storm",
-        "Gale",
-        "Squall"
-      ]
-    },
-    "teamPopup": {
-      "info": "more Information",
-      "wowsNumbers": "Clan on Wows-Numbers"
-    },
-    "hidden": "Player has a hidden profile",
-    "bot": "This is a bot",
-    "noBattles": "Player has no battles on this ship yet"
+      "bot": "This is a bot",
+      "cw": {
+          "leagues": [
+              "Gale",
+              "Hurricane",
+              "Squall",
+              "Storm",
+              "Typhoon"
+          ],
+          "text": "Rank {{rank}} in {{league}}, Division {{division}}, WR {{winrate}}%"
+      },
+      "hidden": "Player has a hidden profile",
+      "map": "Map",
+      "matchGroup": {
+          "CLAN": "Clan War",
+          "COOPERATIVE": "Coop",
+          "PVE": "PVE",
+          "PVP": "Random",
+          "RANKED": "Ranked"
+      },
+      "noBattles": "Player has no battles on this ship yet",
+      "season": "Season",
+      "teamPopup": {
+          "info": "more Information",
+          "wowsNumbers": "Clan on Wows-Numbers"
+      }
+  },
+  "pathPicker": {
+      "additionalInfo": "Information about selected folder",
+      "buttonLabel": "Select folder",
+      "description": "Select the main installation folder of World of Warships. <br />    If you have the WGC installation the path should look similar to this:<br />    <strong>C:\\Games\\World of Warships</strong> <br />    If you have the Steam installation the path should look similar to this:<br />    <strong>C:\\Programs\\Steam\\common<i>id</i>World of Warships</strong>",
+      "dialogHeader": "Select your game folder",
+      "pickFolder": "Select your game folder"
+  },
+  "service": {
+      "connected": "Service connected",
+      "hostConnected": "Service conntected and desktop client paired",
+      "issues": {
+          "browser": {
+              "hostDisconnected": "Service connected but no desktop client is paired.",
+              "noToken": "Service connected but no desktop client token found."
+          },
+          "connection": "Couldn't connect to the online service."
+      },
+      "reconnect": "Reconnect to service",
+      "status": {
+          "fetched": "Match up-to-date",
+          "fetching": "Updating match",
+          "idle": "Waiting for match..."
+      }
   },
   "settings": {
-    "header": "Settings",
-    "general": {
-      "title": "General",
-      "autoUpdate": {
-        "caption": "AutoUpdate",
-        "summary": "When enabled app will check for a new version at each start."
+      "appearance": {
+          "coloredValues": {
+              "caption": "Colored Values",
+              "summary": "When enabled the values of damage, winrate, battles, frags and PR will be colored according to the wows-numbers color scheme"
+          },
+          "fontsize": {
+              "caption": "Fontsize",
+              "items": {
+                  "big": "Big",
+                  "huge": "Huge",
+                  "normal": "Normal",
+                  "small": "small"
+              },
+              "summary": "Change the fontsize of the player and team information."
+          },
+          "playerBackgrounds": {
+              "caption": "Player Backgrounds",
+              "items": {
+                  "accwr": "Account Winrate",
+                  "off": "Disabled",
+                  "pr": "PR",
+                  "wr": "Winrate"
+              },
+              "summary": "Choose wether you want the player panels to have the background color of the pr, winrate or no specific color."
+          },
+          "title": "Appearance"
       },
-      "closeToTray": {
-        "caption": "Close to tray",
-        "summary": "When enabled app will minimize to tray upon clicking the close icon."
+      "general": {
+          "autoUpdate": {
+              "caption": "AutoUpdate",
+              "summary": "When enabled app will check for a new version at each start."
+          },
+          "closeToTray": {
+              "caption": "Close to tray",
+              "summary": "When enabled app will minimize to tray upon clicking the close icon."
+          },
+          "title": "General"
+      },
+      "header": "Settings",
+      "miscellaneous": {
+          "forceLandscape": {
+              "caption": "Force landscape",
+              "summary": "When you're on your mobile device and have the app open as web-app/fullscreen this will lock the orientation to landscape."
+          },
+          "overwriteReplaysDirectory": {
+              "button": "Select",
+              "caption": "Replays directory",
+              "summary": "If for some reason the automatic detection does not work for you, you can manually overwrite the replays directory here."
+          },
+          "title": "Miscellaneous"
       }
-    },
-    "appearance": {
-      "title": "Appearance",
-      "fontsize": {
-        "caption": "Fontsize",
-        "summary": "Change the fontsize of the player and team information.",
-        "items": {
-          "small": "small",
-          "normal": "Normal",
-          "big": "Big",
-          "huge": "Huge"
-        }
-      },
-      "playerBackgrounds": {
-        "caption": "Player Backgrounds",
-        "summary": "Choose wether you want the player panels to have the background color of the pr, winrate or no specific color.",
-        "items": {
-          "off": "Disabled",
-          "pr": "PR",
-          "wr": "Winrate",
-          "accwr": "Account Winrate"
-        }
-      },
-      "coloredValues": {
-        "caption": "Colored Values",
-        "summary": "When enabled the values of damage, winrate, battles, frags and PR will be colored according to the wows-numbers color scheme"
-      }
-    },
-    "miscellaneous": {
-      "title": "Miscellaneous",
-      "overwriteReplaysDirectory": {
-        "caption": "Replays directory",
-        "summary": "If for some reason the automatic detection does not work for you, you can manually overwrite the replays directory here.",
-        "button": "Select"
-      },
-      "forceLandscape": {
-        "caption": "Force landscape",
-        "summary": "When you're on your mobile device and have the app open as web-app/fullscreen this will lock the orientation to landscape."
-      }
-    }
   },
   "uiMessages": {
-    "summaries": {
-      "success": "Success",
-      "error": "Error",
-      "warn": "Warning"
-    },
-    "messages": {
-      "serviceError": "Error in the api service",
-      "serviceConnected": "Service successfully connected.",
-      "serviceDisconnected": "Service has been disconnected.",
-      "noServiceConnection": "Service could not be connected.",
-      "matchUpdated": "Match updated.",
-      "clientConnected": "Web app client connected.",
-      "clientDisconnected": "Web app client disconnected.",
-      "hostDisconnected": "Desktop client disconnected",
-      "settingsSaved": "Settings saved",
-      "fetchingError": "Error in stats fetcher api. Please contact me."
-    }
+      "messages": {
+          "clientConnected": "Web app client connected.",
+          "clientDisconnected": "Web app client disconnected.",
+          "fetchingError": "Error in stats fetcher api. Please contact me.",
+          "hostDisconnected": "Desktop client disconnected",
+          "matchUpdated": "Match updated.",
+          "noServiceConnection": "Service could not be connected.",
+          "serviceConnected": "Service successfully connected.",
+          "serviceDisconnected": "Service has been disconnected.",
+          "serviceError": "Error in the api service",
+          "settingsSaved": "Settings saved"
+      },
+      "summaries": {
+          "error": "Error",
+          "success": "Success",
+          "warn": "Warning"
+      }
   },
-  "changelogs": {
-    "dialogHeader": "Changelog v{{version}}",
-    "closeButton": "Got it!",
-    "markAllAsSeen": "Mark all as seen"
+  "webConnect": {
+      "browser": {
+          "chooseVideo": "Select camera",
+          "description": "Connect to a desktop app by following the steps below.",
+          "step1": "Scan the QR-Code from the desktop app.",
+          "step2": "Enjoy!",
+          "title": "Web-Connect"
+      },
+      "desktop": {
+          "description": "This feature is mainly for people who don't own a second screen and don't want to tab out of the game. <br /> Visit <a href=\"https://app.wows-monitor.com\">app.wows-monitor.com</a> on your second device (phone, laptop, etc) and open the Web-Connect popup. <br /> After you scanned this QR-Code you will receive all match updates on your second device",
+          "title": "Web-Connect"
+      },
+      "issues": {
+          "permission": "Camera permission is required"
+      }
   }
 }
