added compact mode styles and html

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -85,7 +85,7 @@
     },
     "noBattles": "Player has no battles on this ship yet",
     "pr": {
-      "poweredBy": null
+      "poweredBy": "Personal Rating from wows-numbers.com"
     },
     "season": "Season",
     "teamPopup": {
