Added waiting for match message

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,6 +74,7 @@
       },
       "text": "Rank {{rank}} in {{league}}, Division {{division}}, WR {{winrate}}%"
     },
+    "empty": "waiting for a match",
     "hidden": "Player has a hidden profile",
     "map": "Map",
     "matchGroup": {
