--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -220,7 +220,9 @@
       "serviceConnected": "Service successfully connected.",
       "serviceDisconnected": "Service has been disconnected.",
       "serviceError": "Error in the api service",
-      "settingsSaved": "Settings saved"
+      "settingsSaved": "Settings saved",
+      "noHostPaired": "No desktop client paired",
+      "hostLost": "Desktop client disconnected"
     },
     "summaries": {
       "error": "Error",
